--- a/pipeline.qsf
+++ b/pipeline.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CGXFC7C7F23C8
-set_global_assignment -name TOP_LEVEL_ENTITY fetch_cycle
+set_global_assignment -name TOP_LEVEL_ENTITY Pipeline_Top
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "21:58:53  OCTOBER 19, 2024"
 set_global_assignment -name LAST_QUARTUS_VERSION "20.1.0 Lite Edition"
@@ -84,7 +84,7 @@ set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH fetch_cycle_tb -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH pipeline_tb -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME fetch_cycle_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id fetch_cycle_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME fetch_cycle_tb -section_id fetch_cycle_tb
@@ -108,9 +108,14 @@ set_global_assignment -name SYSTEMVERILOG_FILE VGA/main.sv
 set_global_assignment -name SYSTEMVERILOG_FILE VGA/main_tb.sv
 set_global_assignment -name SYSTEMVERILOG_FILE VGA/mostrarImagen.sv
 set_global_assignment -name SYSTEMVERILOG_FILE VGA/sincronizador.sv
-set_global_assignment -name EDA_TEST_BENCH_FILE Procesador/fetch_cycle_tb.sv -section_id fetch_cycle_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Procesador/memory_cycle_tb.sv -section_id memory_cycle_tb
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name EDA_TEST_BENCH_NAME pipeline_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id pipeline_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME pipeline_tb -section_id pipeline_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Procesador/fetch_cycle_tb.sv -section_id fetch_cycle_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Procesador/memory_cycle_tb.sv -section_id memory_cycle_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Procesador/pipeline_tb.sv -section_id pipeline_tb
+set_global_assignment -name MIF_FILE imem.mif
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
