--- a/pipeline.qsf
+++ b/pipeline.qsf
@@ -118,4 +118,10 @@ set_global_assignment -name EDA_TEST_BENCH_FILE Procesador/fetch_cycle_tb.sv -se
 set_global_assignment -name EDA_TEST_BENCH_FILE Procesador/memory_cycle_tb.sv -section_id memory_cycle_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Procesador/pipeline_tb.sv -section_id pipeline_tb
 set_global_assignment -name MIF_FILE imem.mif
+set_global_assignment -name SYSTEMVERILOG_FILE Procesador/ByteDecoder.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Procesador/ByteEnableDecoder.sv
+set_global_assignment -name QIP_FILE Procesador/Ram.qip
+set_global_assignment -name VERILOG_FILE Procesador/Ram.v
+set_global_assignment -name VERILOG_FILE Procesador/Ram_bb.v
+set_global_assignment -name SYSTEMVERILOG_FILE Procesador/Ram_tb.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
